--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,19 @@
 body {
   text-align: center;
-  border-radius: 10px;
   display: block;
   margin: 0 auto;
-  width: 75%;
-}
-
-h1,
-h2,
-h4 {
+  width: 700px;
+  border-radius: 10px;
+  padding: 20px;
   font-family: "Ubuntu", sans-serif;
 }
 
 h1 {
   color: teal;
-  margin: 0;
   font-size: 64px;
+  text-align: left;
   padding: 20px 20px;
+  line-height: 20px;
 }
 
 footer {
