Updated js and css
Added overview class to section off h1, date and time. Updated js Date function

--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,10 @@ footer {
   margin: auto;
 }
 
+.overview {
+  padding-bottom: 20px;
+}
+
 .today-weather-icon {
   color: darkgoldenrod;
   font-size: 76px;
