--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,13 @@ h1 {
   line-height: 20px;
 }
 
+h1,
+h2,
+h3,
+h4:first-letter {
+  text-transform: capitalize;
+}
+
 footer {
   text-align: center;
   bottom: 0;
@@ -34,14 +41,14 @@ footer {
   text-align: left;
 }
 
-.today-weather {
+#current-date {
   font-size: 28px;
   padding-top: 15px;
   padding-bottom: 0;
   line-height: 30px;
 }
 
-.today-weather-description {
+#weather-description {
   font-size: 22px;
   padding-top: 0;
   line-height: 20px;
@@ -53,7 +60,7 @@ footer {
   margin: 0 auto;
 }
 
-.today-temp {
+#todays-temp {
   font-size: 58px;
   line-height: 1;
 }
