updated forecast temperature
amended p elements to span elements

--- a/src/style.css
+++ b/src/style.css
@@ -117,10 +117,10 @@ footer {
   margin: -20 auto;
 }
 
-.button-search {
+#search-city-button {
   display: inline-block;
 }
 
-.button-current {
+#current-location-button {
   display: inline-block;
 }
